--- a/wyun-restsvc/src/main/resources/application.properties
+++ b/wyun-restsvc/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
 
 # Replace with your connection string: 182.92.195.40
-spring.datasource.url=jdbc:mysql://192.168.39.136:3306/wlsp?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://vpns:3306/wlsp?useUnicode=yes&characterEncoding=UTF-8
 
 # Replace with your credentials
 spring.datasource.username=wlsp
