--- a/wyun-restsvc/build.gradle
+++ b/wyun-restsvc/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     compile("com.squareup.retrofit:converter-jackson:1.6.1")
     compile("commons-io:commons-io:2.4")
     
+    compile("org.jsoup:jsoup:1.8.1")
+    
     testCompile("junit:junit")
 }
 
