--- a/wyun-restsvc/src/main/resources/application.properties
+++ b/wyun-restsvc/src/main/resources/application.properties
@@ -13,6 +13,17 @@ spring.datasource.url=jdbc:mysql://vpns:3306/wlsp?useUnicode=yes&characterEncodi
 spring.datasource.username=wlsp
 spring.datasource.password=qhd_0ffs4t!
 
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
+
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 # LOGGING
+
+#wlsp
+wlsp.lottery.name=iserver
+wlsp.lottery.delay=180000
+
+#wlsp.sms.server=http://221.239.107.13:8080
+wlsp.sms.server=http://localhost:8080
+#http://localhost:8080
