--- a/wyun-restsvc/src/main/resources/application.properties
+++ b/wyun-restsvc/src/main/resources/application.properties
@@ -26,4 +26,7 @@ wlsp.lottery.delay=180000
 
 #wlsp.sms.server=http://221.239.107.13:8080
 wlsp.sms.server=http://localhost:8080
-#http://localhost:8080
+
+#caipiao
+caipiao.blocked.hours=00,01,02,03,04,05,06,07,08,09,10,11,16,17,18,19,20,21,22,23
+caipiao.operator.num=13333339022
