--- a/wyun-restsvc/build.gradle
+++ b/wyun-restsvc/build.gradle
@@ -51,8 +51,12 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-aop:${springBootVersion}")
     compile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
     compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}")
     compile("org.springframework.data:spring-data-rest-webmvc")
     compile("ch.qos.logback:logback-access:1.1.2")
+    
+    compile("org.webjars:bootstrap:3.0.3")
+    compile("org.webjars:jquery:2.0.3-1")
     
     
     compile("mysql:mysql-connector-java")
