--- a/wyun-restsvc/build.gradle
+++ b/wyun-restsvc/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.2.0.RELEASE'
+		springBootVersion = '1.2.1.RELEASE'
 	}
     repositories {
         maven { url "http://repo.spring.io/libs-snapshot" }
@@ -51,8 +51,11 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-aop:${springBootVersion}")
     compile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
     compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+    compile("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}")
     compile("org.springframework.data:spring-data-rest-webmvc")
+    compile("org.springframework.boot:spring-boot-starter-security")
+    
     compile("ch.qos.logback:logback-access:1.1.2")
     
     compile("org.webjars:bootstrap:3.0.3")
