debug spring security. tomcat logging management context path set.

--- a/wyun-restsvc/src/main/resources/application.properties
+++ b/wyun-restsvc/src/main/resources/application.properties
@@ -19,6 +19,11 @@ spring.datasource.validationQuery=SELECT 1
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 # LOGGING
+logging.level.org.springframework.security=DEBUG
+
+#tomcat
+server.tomcat.accessLogEnabled=true
+server.tomcat.accessLogPattern=%a asdasd
 
 #wlsp
 wlsp.lottery.name=iserver
@@ -33,3 +38,6 @@ caipiao.operator.num=13333339022
 
 #thymeleaf, turn off cache for dev
 spring.thymeleaf.cache=false
+
+#boot
+management.contextPath = /admin
