configure management context path to /admin

--- a/wyun-restsvc/src/main/resources/production.properties
+++ b/wyun-restsvc/src/main/resources/production.properties
@@ -21,3 +21,6 @@ wlsp.sms.server=http://221.239.107.13:8080
 #caipiao
 caipiao.blocked.hours=22,23,00,01,02,03,04,05
 caipiao.operator.num=13333339022
+
+#boot
+management.contextPath = /admin
