--- a/wyun-restsvc/src/main/resources/application.properties
+++ b/wyun-restsvc/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=validate
 
 # Replace with your connection string: 182.92.195.40
-spring.datasource.url=jdbc:mysql://vpns:3306/wlsp?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/wlsp?useUnicode=yes&characterEncoding=UTF-8
 
 # Replace with your credentials
 spring.datasource.username=wlsp
-spring.datasource.password=qhd_0ffs4t!
+spring.datasource.password=wlsp
 
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
@@ -31,6 +31,7 @@ wlsp.lottery.delay=180000
 
 #wlsp.sms.server=http://221.239.107.13:8080
 wlsp.sms.server=http://localhost:8080
+server.port = 8080
 
 #caipiao, in dev mode, no caipiao polling
 caipiao.blocked.hours=00,01,02,03,04,05,06,07,08,09,10,11,12,13,14,15,16,17,18,19,20,21,22,23
